--- a/Style/deliverypage_style.css
+++ b/Style/deliverypage_style.css
@@ -71,13 +71,14 @@
     margin-bottom: -15px;
 }
 
-#namelabel, #mobileNolabel, #adresslabel, #citylabel,#delDate-label, #delTime-label, #callOption, #comments-label{
+#namelabel, #mobileNolabel, #adresslabel, #citylabel,#delDate-label, #delTime-label, #comments-label{
     margin-bottom: 18px;
 
 }
 .ui-field-contain {
     margin-bottom: 5px;
 }
+
 #fullname, #mobileNo, #adress, #city, #deliveryDate,  #deliveryTime, #comments{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: left;
@@ -95,12 +96,10 @@
 }
 
 #callOption-label {
+    margin-top: 18px;
     background-color: aliceblue;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
-    font-size: 14px;
-    top: 15px;
-    padding: 20px;
 
 }
 
@@ -120,7 +119,7 @@
 #back-btn {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-    background-color: white;
+
     width: 100%;
     color: #f28500;
 
