--- a/Style/deliverypage_style.css
+++ b/Style/deliverypage_style.css
@@ -1,4 +1,7 @@
+
+/*Stylings of Delivery, Payment,Home Delivery and Store Pickup Pages*/
 /* Top nav styling */
+
 #top_navigation {
     background-color: white;
     height: 135px;
@@ -56,7 +59,7 @@
 
 /*Delivery Page Content styling*/
 
-#delivery_title {
+#delivery_title, #paymentInfo_title {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     margin-bottom: 10px;
@@ -64,22 +67,35 @@
     color: #f28500;
 }
 
-#recipientInfo_title, #deliveryInfo_title {
+#recipientInfo_title, #deliveryInfo_title{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: left;
-    padding-top: 10px;
+
+    font-size: large;
     margin-bottom: -15px;
 }
 
-#namelabel, #mobileNolabel, #adresslabel, #citylabel,#delDate-label, #delTime-label, #comments-label{
+#storePick_title, #homeDelivery_title{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+    margin-bottom: -15px;
+    font-size: large;
+
+}
+
+#paymentDetail-title, #paymentMethod-title {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+    margin-bottom: 15px;
+    font-size: large;
+}
+#namelabel, #mobileNolabel, #adresslabel, #citylabel,#delDate-label, #delTime-label, #comments-label, #cardNo-label,
+#cardType-label, #nameInCard-label, #expiryDate-label, #cvv-label{
     margin-bottom: 18px;
 
 }
-.ui-field-contain {
-    margin-bottom: 5px;
-}
 
-#fullname, #mobileNo, #adress, #city, #deliveryDate,  #deliveryTime, #comments{
+#fullname, #mobileNo, #adress, #city, #deliveryDate,  #deliveryTime, #comments, #cardType, #cardNo, #nameInCard, #expiryDate, #cvv{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: left;
     padding: 10px;
@@ -95,7 +111,7 @@
     color: black;
 }
 
-#callOption-label {
+#callOption-label, #rememberOption-label {
     margin-top: 18px;
     background-color: aliceblue;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -103,6 +119,7 @@
 
 }
 
+/*Map styling*/
 #map-title, #text {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
@@ -116,13 +133,14 @@
     padding: 10px;
 }
 
+/*buttons styling*/
+
 #back-btn {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-
+    border-color: #f28500;
     width: 100%;
     color: #f28500;
-
 }
 
 #payment-btn {
@@ -132,3 +150,32 @@
     background-color: #428fe5;
     color: white;
 }
+
+
+/*Payment Option icons style*/
+
+#visa_icon, #mastercard_icon, #amex_icon, #cash_icon {
+
+    color: #6c7075;
+    text-align: center;
+    margin-left: 10px ;
+    margin-right: 10px;
+    margin-bottom: 15px;
+    padding: 15px 30px;
+    border-color: gainsboro;
+}
+
+.fa-border {
+    background: white;
+    color: black;
+    text-align: center;
+}
+
+/*.line{*/
+    /*width: 100%;*/
+    /*margin-left: 30px;*/
+    /*margin-right: 30px;*/
+    /*border-top: 20px;*/
+    /*border-bottom: 1px solid #f28500;*/
+    /*position: absolute;*/
+/*}*/
