--- a/Style/cartpage_style.css
+++ b/Style/cartpage_style.css
@@ -74,3 +74,136 @@
 
 /*Card views styling*/
 
+#cart-title {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: larger;
+    color: #f28500;
+}
+
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin:20px 10px;
+
+    padding: -20px;
+    text-align: center;
+}
+
+
+
+.product-title {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+}
+
+.product-qty {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: #6c7075;
+    text-align: right;
+
+}
+
+.product-desc {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: darkgray;
+}
+
+.product-image-td {
+    text-align: left;
+    border-left: 10px solid #f28500;
+    border-right: 1px solid gainsboro;
+}
+.product-data-td {
+    padding-top: 5px;
+    text-align: left;
+    padding-left: 15px;
+}
+
+.product-extra-td{
+    padding-top: 5px;
+    padding-right: 10px;
+    text-align: right;
+}
+.product-price {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    color: #428fe5;
+}
+
+#deletebtn1, #deletebtn2, #deletebtn3 {
+    padding-bottom: 25px;
+    color:#6c7075;
+}
+
+
+.addtocart-btn button:hover {
+    opacity: 0.7;
+}
+
+#promocode-label{
+    text-align:  center;
+
+}
+
+#promocode{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+    padding: 10px;
+    font-size: 14px;
+}
+
+#apply-promo-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border-radius: 10%;
+    font-size: medium;
+    background-color: black;
+    color: white;
+}
+
+.card2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin:20px 10px;
+    padding: 20px;
+    text-align: center;
+}
+
+
+.tr1 {
+    border-bottom: 1px solid #f28500;
+    text-align: left;
+    padding-bottom: 30px;
+}
+
+#tr2 {
+    border-top: 20px;
+    text-align: right;
+}
+
+#back-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    border-color: #f28500;
+    width: 100%;
+    color: #f28500;
+}
+
+#payment-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 100%;
+    font-size: large;
+    background-color: #428fe5;
+    color: white;
+}
+
+
+/*Empty Cart Page Styling*/
+
+#noitems {
+    margin-top: 30px;
+    text-align: center;
+}
