--- a/Style/cartpage_style.css
+++ b/Style/cartpage_style.css
@@ -63,8 +63,17 @@
     background: white;
 }
 
-#qrcode_icon, #cart_icon, #home_icon, #user_icon, #other_icon {
+#qrcode_icon, #home_icon, #user_icon, #other_icon {
     color: #6c7075;
+    font-size: 20px;
+    border: 10px solid white;
+    background: white;
+    text-align: center;
+
+}
+
+#cart_icon{
+    color: #f28500;
     font-size: 20px;
     border: 10px solid white;
     background: white;
