--- a/Style/deliverypage_style.css
+++ b/Style/deliverypage_style.css
@@ -9,7 +9,7 @@
 
 .logo {
     top: 10px;
-    height: 80px;
+    height: 65px;
 }
 
 #category_icon {
@@ -50,8 +50,17 @@
     background: white;
 }
 
-#qrcode_icon, #cart_icon, #home_icon, #user_icon, #other_icon {
+#qrcode_icon, #home_icon, #user_icon, #other_icon {
     color: #6c7075;
+    font-size: 20px;
+    border: 10px solid white;
+    background: white;
+    text-align: center;
+
+}
+
+#cart_icon {
+    color: #f28500;
     font-size: 20px;
     border: 10px solid white;
     background: white;
