--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -53,6 +53,11 @@
     .carousel-inner img {
         width: 100%;
         height: 100%;
+        align-content: center;
+    }
+
+    .slides{
+        text-align: center;
     }
 }
 
@@ -115,7 +120,7 @@
         text-align: center;
     }
 
-    .promo_slides {
+    .slides{
         text-align: center;
     }
 
