--- a/Style/cartpage_style.css
+++ b/Style/cartpage_style.css
@@ -132,6 +132,28 @@
     padding-left: 15px;
 }
 
+@media (min-width: 600px) {
+    .product-title {
+        font-size: 24px;
+    }
+    .product-price{
+        font-size: 24px;
+    }
+    .product-qty{
+        padding-top: 10px;
+        padding-right: 40px;
+        text-align: right;
+        font-size: 18px;
+    }
+    .del{
+        padding-top: 5px;
+        padding-right: 40px;
+        text-align: right;
+        font-size: 20px;
+    }
+
+}
+
 .product-extra-td{
     padding-top: 5px;
     padding-right: 10px;
