--- a/Style/cartpage_style.css
+++ b/Style/cartpage_style.css
@@ -1,4 +1,4 @@
-
+/*Cart Page, Emoty Cart Page and WishList pages*/
 /* Top nav styling */
 #top_navigation {
     background-color: white;
@@ -70,7 +70,6 @@
     border: 10px solid white;
     background: white;
     text-align: center;
-
 }
 
 #cart_icon{
@@ -79,7 +78,6 @@
     border: 10px solid white;
     background: white;
     text-align: center;
-
 }
 
 /*Card views styling*/
@@ -92,23 +90,19 @@
     color: #f28500;
 }
 
-
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin:20px 10px;
-
     padding: -20px;
     text-align: center;
 }
-
-
 
 .product-title {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 18px;
 }
 
-.product-qty {
+.product-qty, .share_btn {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 14px;
     color: #6c7075;
@@ -138,6 +132,7 @@
     padding-right: 10px;
     text-align: right;
 }
+
 .product-price {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 18px;
@@ -149,14 +144,12 @@
     color:#6c7075;
 }
 
-
 .addtocart-btn button:hover {
     opacity: 0.7;
 }
 
 #promocode-label{
     text-align:  center;
-
 }
 
 #promocode{
@@ -182,16 +175,10 @@
     text-align: center;
 }
 
-
 .tr1 {
     border-bottom: 1px solid #f28500;
     text-align: left;
     padding-bottom: 30px;
-}
-
-#tr2 {
-    border-top: 20px;
-    text-align: right;
 }
 
 #back-btn {
@@ -216,4 +203,26 @@
 #noitems {
     margin-top: 30px;
     text-align: center;
+}
+
+/*Wish List Styling*/
+
+.star-rating {
+    padding-bottom: 10px;
+}
+
+#heart_btn1, #heart_btn2, #heart_btn3 {
+    color: #c5322d;
+    padding-right: 10px;
+
+}
+
+.checked{
+    color: #f28500;
+    text-shadow: 0 0 3px #ffbf00;
+}
+
+.unchecked{
+    color: white;
+    text-shadow: 0 0 3px #222222;
 }
