--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -4,13 +4,13 @@
     /* Top nav styling */
     #top_navigation {
         background-color: white;
-        height: 135px;
+        height: 122px;
         padding-top: 10px;
     }
 
     .logo {
         top: 10px;
-        height: 65px;
+        height: 52px;
     }
 
     #category_icon {
@@ -31,8 +31,9 @@
 
     .ui-filterable {
         width: auto;
-        margin-left: 18px;
-        box-shadow: #428fe5;
+        margin-left: 25px;
+        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+        margin-right: 25px;
     }
 
     #filter_icon {
@@ -47,7 +48,9 @@
     #promo_title, #category_title {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
+        font-size: larger;
+        color: black;
     }
 
     .carousel-inner img {
@@ -67,13 +70,13 @@
     /* Top nav styling */
     #top_navigation {
         background-color: white;
-        height: 115px;
+        height: 105px;
         padding-top: 10px;
     }
 
     .logo {
         top: 10px;
-        height: 45px;
+        height: 40px;
     }
 
     #category_icon {
@@ -81,7 +84,7 @@
         top: 25px;
         left: 28px;
         color: #6c7075;
-        font-size: 25px;
+        font-size: 20px;
     }
 
     #promotion_icon {
@@ -89,13 +92,14 @@
         top: 25px;
         right: 28px;
         color: #f28500;
-        font-size: 25px;
+        font-size: 20px;
     }
 
     .ui-filterable {
         width: auto;
-        margin-left: 18px;
-        box-shadow: #428fe5;
+        margin-left: 20px;
+        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+        margin-right: 20px;
     }
 
     #filter_icon {
@@ -110,8 +114,9 @@
     #promo_title, #category_title {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
-        margin-bottom: 20px;
-        font-size: 14px;
+        margin-bottom: 15px;
+        font-size: larger;
+        color: black;
     }
 
     .carousel-inner img {
