--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -45,7 +45,7 @@
 
     /* Home Page content styling */
 
-    #promo_title, #category_title {
+    #promo_title, #category_title, #offers_title {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
         margin-bottom: 15px;
@@ -61,6 +61,18 @@
 
     .slides{
         text-align: center;
+    }
+
+    .flash{
+        padding-bottom: 5px;
+        text-align: center;
+    }
+    #countDown{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        text-align: center;
+        font-size: larger;
+        color: white;
+        padding: 5px;
     }
 }
 
@@ -111,7 +123,7 @@
 
     /* Home Page content styling */
 
-    #promo_title, #category_title {
+    #promo_title, #category_title, #offers_title {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
         margin-bottom: 15px;
@@ -128,7 +140,109 @@
     .slides{
         text-align: center;
     }
+    .flash{
+        padding-bottom: 5px;
+        text-align: center;
+    }
+    #countDown{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        text-align: center;
+        font-size: larger;
+        color: white;
+        padding: 5px;
+    }
 
+}
+
+/*flash sales*/
+
+.c1 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin:20px 10px;
+    padding: -20px;
+    text-align: center;
+    /*max-width: 500px;*/
+}
+.product-title {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+}
+
+.product-qty {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: #6c7075;
+    text-align: right;
+
+}
+
+.product-desc {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: darkgray;
+}
+
+.product-image-td {
+    text-align: left;
+    border-left: 10px solid #f28500;
+    border-right: 1px solid gainsboro;
+}
+
+.product-data-td {
+    padding-top: 5px;
+    text-align: left;
+    padding-left: 15px;
+}
+
+@media (min-width: 600px) {
+    .product-title {
+        font-size: 24px;
+    }
+    .product-price{
+        font-size: 24px;
+    }
+    .product-qty{
+        padding-top: 10px;
+        padding-right: 40px;
+        text-align: right;
+        font-size: 18px;
+    }
+    .del{
+        padding-top: 5px;
+        padding-right: 40px;
+        text-align: right;
+        font-size: 20px;
+    }
+
+    .c1 {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin:30px 150px;
+        padding: -20px;
+        text-align: center;
+        /*max-width: 500px;*/
+    }
+
+}
+
+@media (min-width: 1000px) {
+    .c1 {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin:30px 170px;
+        padding: -20px;
+        text-align: center;
+        /*max-width: 500px;*/
+    }
+}
+
+.product-extra-td{
+    padding-top: 5px;
+    padding-right: 10px;
+    text-align: right;
+}
+.product-price {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    color: #428fe5;
 }
 
 /* Bottom nav styling */
