--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -49,7 +49,7 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
         margin-bottom: 15px;
-        font-size: larger;
+        font-size: 20px;
         color: black;
     }
 
@@ -127,7 +127,7 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
         margin-bottom: 15px;
-        font-size: larger;
+        font-size: 22px;
         color: black;
     }
 
@@ -170,8 +170,8 @@
 
 .product-qty {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 14px;
-    color: #6c7075;
+    font-size: 16px;
+    color: red;
     text-align: right;
 
 }
@@ -199,13 +199,13 @@
         font-size: 24px;
     }
     .product-price{
-        font-size: 24px;
+        font-size: 26px;
     }
     .product-qty{
         padding-top: 10px;
         padding-right: 40px;
         text-align: right;
-        font-size: 18px;
+        font-size: 20px;
     }
     .del{
         padding-top: 5px;
@@ -241,8 +241,8 @@
 }
 .product-price {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #428fe5;
+    font-size: 20px;
+    color: red;
 }
 
 /* Bottom nav styling */
