--- a/Style/cartpage_style.css
+++ b/Style/cartpage_style.css
@@ -183,6 +183,14 @@
     padding-left: 15px;
 }
 
+.c1, .c2, .c3 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin:20px 10px;
+    padding: -20px;
+    text-align: center;
+    /*max-width: 500px;*/
+}
+
 @media (min-width: 600px) {
     .product-title {
         font-size: 24px;
@@ -201,6 +209,13 @@
         padding-right: 40px;
         text-align: right;
         font-size: 20px;
+    }
+    .c1, c2, c3 {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin:30px 150px;
+        padding: -20px;
+        text-align: center;
+        /*max-width: 500px;*/
     }
 
 }
@@ -281,6 +296,27 @@
     background-color: #428fe5;
     color: white;
 }
+
+/*buttons styling*/
+
+#back-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    border-color: #f28500;
+    width: 100%;
+    color: #f28500;
+    max-width: 300px;
+}
+
+#payment-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 100%;
+    font-size: large;
+    background-color: #428fe5;
+    color: white;
+    max-width: 300px;
+}
+
 
 
 /*Empty Cart Page Styling*/
