--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -173,7 +173,6 @@
     font-size: 16px;
     color: red;
     text-align: right;
-
 }
 
 .product-desc {
@@ -243,6 +242,17 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
     color: red;
+}
+.checked{
+    color: #f28500;
+    text-shadow: 0 0 3px #ffbf00;
+    font-size: 12px;
+}
+
+.unchecked{
+    color: white;
+    text-shadow: 0 0 3px #222222;
+    font-size: 12px;
 }
 
 /* Bottom nav styling */
