--- a/Style/deliverypage_style.css
+++ b/Style/deliverypage_style.css
@@ -242,3 +242,54 @@
     /*border-bottom: 1px solid #f28500;*/
     /*position: absolute;*/
 /*}*/
+
+/*Categories icon overlay styling*/
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: white;
+    /*background-color: rgba(255,255,255, 0.9);*/
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 24px;
+    color: black;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 100px;
+    right: 40px;
+    font-size: 40px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 73px;
+        right: 30px;
+    }
+}
