--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -45,7 +45,7 @@
 
     /* Home Page content styling */
 
-    #promo_title, #category_title, #offers_title {
+    #promo_title, #category_title, #offers_title, #services_title {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
         margin-bottom: 15px;
@@ -123,7 +123,7 @@
 
     /* Home Page content styling */
 
-    #promo_title, #category_title, #offers_title {
+    #promo_title, #category_title, #offers_title, #services_title {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
         margin-bottom: 15px;
@@ -321,6 +321,10 @@
 }
 
 /* Promotion overview card sliders styling*/
+.imgpromo{
+    max-width: 100px;
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+}
 
 @media (width: 768px) {
     /* show 3 items */
@@ -397,4 +401,66 @@
         font-size: larger;
     }
 
+}
+
+/*Categories icon overlay styling*/
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: white;
+    /*background-color: rgba(255,255,255, 0.9);*/
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 24px;
+    color: black;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 100px;
+    right: 40px;
+    font-size: 40px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 73px;
+        right: 30px;
+    }
+}
+
+/*    second slides*/
+.mySlides {
+    display:none
+}
+.w3-tag, .fa {
+    cursor:pointer
+}
+.w3-tag {
+    height:15px;width:15px;padding:0;margin-top:6px
 }
