--- a/Style/productpage_style.css
+++ b/Style/productpage_style.css
@@ -170,6 +170,15 @@
     max-width: 300px;
 }
 
+#back-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    border-color: #f28500;
+    width: 100%;
+    color: #f28500;
+    max-width: 300px;
+}
+
 #minus{
     width: 40px;
     height: 40px;
@@ -218,4 +227,55 @@
     font-size: 25px;
     color: #f28500;
     margin-right: 8px;
+}
+
+/*Categories icon overlay styling*/
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: white;
+    /*background-color: rgba(255,255,255, 0.9);*/
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 24px;
+    color: black;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 100px;
+    right: 40px;
+    font-size: 40px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 73px;
+        right: 30px;
+    }
 }
