--- a/Style/wishlist.css
+++ b/Style/wishlist.css
@@ -131,6 +131,12 @@
 
 }
 
+.promo-off{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: #ff0000;
+}
+
 /*Card views styling*/
 
 #cart-title {
@@ -148,7 +154,11 @@
     text-align: center;
 }
 
-
+.product-id {
+    /*visibility: hidden;*/
+    color: black;
+    font-size: 10px;
+}
 
 .product-title {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
