--- a/Style/ratingpage_css.css
+++ b/Style/ratingpage_css.css
@@ -43,7 +43,6 @@
         color: #6c7075;
     }
 }
-
 /*landscape*/
 @media screen and (orientation: landscape) {
     /* Top nav styling */
@@ -96,9 +95,11 @@
     color: #6c7075;
 }
 
-.product-img {
+.product-img{
     width: 100%;
 }
+
+
 
 /* Bottom nav styling */
 
@@ -116,7 +117,7 @@
 
 }
 
-#home_icon {
+#home_icon{
     color: #f28500;
     font-size: 20px;
     border: 10px solid white;
@@ -131,8 +132,7 @@
     color: white;
     font-size: 1px;
 }
-
-.promo-off {
+.promo-off{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 14px;
     color: #ff0000;
@@ -143,7 +143,6 @@
     text-align: left;
     margin-bottom: 15px;
 }
-
 #product-price {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: left;
@@ -159,13 +158,14 @@
     font-size: 16px;
 }
 
-.quantity-table {
+.quantity-table
+{
     width: 100%;
     text-align: center;
 
 }
 
-.input-text qty {
+.input-text qty{
     font-size: larger;
     text-align: center;
 }
@@ -189,68 +189,21 @@
     max-width: 300px;
 }
 
-#minus {
-    width: 40px;
-    height: 40px;
-    border-color: #f28500;
-    color: #f28500;
-    border-radius: 100%;
-    margin: 5px;
-    font-size: 12px;
+#sst{
+    max-width: 20px
+;
+}
+#comments-label{
+    margin-bottom: 18px;
+
 }
 
-#plus {
-    width: 40px;
-    height: 40px;
-    border-color: #f28500;
-    color: #f28500;
-    border-radius: 100%;
-    margin: 3px;
-    font-size: 12px;
-}
-
-#sst {
-    max-width: 20px;
-}
-
-.checked {
-    color: #f28500;
-    text-shadow: 0 0 3px #ffbf00;
-    font-size: 15px;
-    margin-bottom: 8px;
-}
-
-.unchecked {
-    color: white;
-    text-shadow: 0 0 4px #222222;
-    font-size: 15px;
-    margin-bottom: 8px;
-}
-
-.heart-button {
-    font-size: 25px;
-    color: #6c7075;
-    margin-right: 8px;
-}
-
-.share {
-    font-size: 25px;
-    color: #f28500;
-    margin-right: 8px;
-}
-
-.promo-item-text {
+#comments{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    color: #428fe5;
+    text-align: left;
+    padding: 10px;
+    font-size: 14px;
 }
-
-.discount {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: red;
-}
-
 /*Categories icon overlay styling*/
 .overlay {
     height: 100%;
@@ -294,10 +247,7 @@
 }
 
 @media screen and (max-height: 450px) {
-    .overlay a {
-        font-size: 20px
-    }
-
+    .overlay a {font-size: 20px}
     .overlay .closebtn {
         font-size: 40px;
         top: 73px;
@@ -305,44 +255,40 @@
     }
 }
 
-/*Reviews Section*/
 
-.card {
-    box-shadow: 0 2px 4px 0 rgba(66, 143, 229, 0.3);
-    background-color: aliceblue;
-    text-align: left;
-    margin-bottom: 5px;
-    /*max-width: 500px;*/
+/*star rating*/
+.rating > span.active:before,
+.rating > span:hover:before,
+.rating > span:hover ~ span:before
+{
+    content: "\2605";
+    position: absolute;
+    color: #f28500;
+    text-shadow: 0 0 3px #ffbf00;
 }
 
-#review-table {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    /*border-bottom: 1px solid #428fe5;*/
-    margin: 5px 15px;
-    /*border-top: 1px solid #428fe5;*/
+.rating {
+    color: #6c7075;
+    font: 700 26px/normal 'Montserrat', sans-serif;
+    text-transform:uppercase;
 
-}
-
-#comment-text {
-    font-size: 16px;
-}
-
-#customer-name {
-    color: gray;
-    margin-top: 40px;
-    border-top: 20px;
-}
-
-#comment-date {
-    text-align: right;
-    font-size: 14px;
-}
-
-#star-rates {
     font-size: 30px;
-}
+    display:block;
+    cursor:pointer;
 
-.new-checked, .new-unchecked {
-    font-size: 17px;
-    margin: 3px;
+}
+.rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+}
+.rating > span {
+    margin: 10px;
+    display: inline-block;
+    position: relative;
+    width: 1.1em;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+    content: "\2605";
+    position: absolute;
 }
