--- a/Style/deliverypage_style.css
+++ b/Style/deliverypage_style.css
@@ -153,6 +153,7 @@
 #namelabel, #mobileNolabel, #adresslabel, #citylabel,#delDate-label, #delTime-label, #comments-label, #cardNo-label,
 #cardType-label, #nameInCard-label, #expiryDate-label, #cvv-label{
     margin-bottom: 18px;
+    font-size: 16px;
 
 }
 
@@ -223,8 +224,8 @@
     text-align: center;
     margin-left: 10px ;
     margin-right: 10px;
-    margin-bottom: 15px;
-    padding: 15px 30px;
+    margin-bottom: 4px;
+    padding: 10px 30px;
     border-color: gainsboro;
 }
 
@@ -292,4 +293,22 @@
         top: 73px;
         right: 30px;
     }
+}
+
+/*Payment*/
+.pType{
+    font-size: 20px;
+    margin: 8px;
+}
+
+.paymentDue{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    background-color: #222222;
+    border: 2px solid white;
+    width: 100%;
+    color: white;
+    max-width: 300px;
+    padding: 20px;
+    border-radius: 10px;
 }
