--- a/Style/deliverypage_style.css
+++ b/Style/deliverypage_style.css
@@ -135,7 +135,7 @@
     margin-bottom: -15px;
 }
 
-#storePick_title, #homeDelivery_title{
+#storePick_title, #homeDelivery_title, #paymentMethod-title{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     margin-bottom: -15px;
@@ -203,7 +203,7 @@
     border-color: #f28500;
     width: 100%;
     color: #f28500;
-    max-width: 300px;
+
 }
 
 #payment-btn {
@@ -212,37 +212,8 @@
     font-size: large;
     background-color: #428fe5;
     color: white;
-    max-width: 300px;
+
 }
-
-
-/*Payment Option icons style*/
-
-#visa_icon, #mastercard_icon, #amex_icon, #cash_icon {
-
-    color: #6c7075;
-    text-align: center;
-    margin-left: 10px ;
-    margin-right: 10px;
-    margin-bottom: 4px;
-    padding: 10px 30px;
-    border-color: gainsboro;
-}
-
-.fa-border {
-    background: white;
-    color: black;
-    text-align: center;
-}
-
-/*.line{*/
-    /*width: 100%;*/
-    /*margin-left: 30px;*/
-    /*margin-right: 30px;*/
-    /*border-top: 20px;*/
-    /*border-bottom: 1px solid #f28500;*/
-    /*position: absolute;*/
-/*}*/
 
 /*Categories icon overlay styling*/
 .overlay {
@@ -296,19 +267,79 @@
 }
 
 /*Payment*/
+
+#visa_icon {
+
+    color: #6c7075;
+    text-align: center;
+    margin-right: 5px;
+    margin-left: -8px;
+    padding: 10px 30px;
+    border-color: gainsboro;
+}
+
+#cash_icon {
+
+    color: #6c7075;
+    text-align: center;
+    margin-left: 3px ;
+    padding: 10px 30px;
+    border-color: gainsboro;
+}
+
+.fa-border {
+    background: white;
+    color: black;
+    text-align: center;
+}
+
 .pType{
     font-size: 20px;
     margin: 8px;
 }
 
-.paymentDue{
+
+.price-container{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: large;
-    background-color: #222222;
-    border: 2px solid white;
-    width: 100%;
-    color: white;
-    max-width: 300px;
-    padding: 20px;
-    border-radius: 10px;
+    height:392px;
+    text-align: center;
+    padding-top: 150px;
+}
+
+#total-price {
+    font-family: Papyrus;
+    font-size: 50px;
+    font-style: inherit;
+}
+
+#total-price-text{
+    font-size: 20px;
+    font-family: Papyrus;
+}
+
+
+#visa_icon > span.active:before,
+#visa_icon > span:hover:before,
+#visa_icon > span:hover ~ span:before
+{
+    content: "\2605";
+    position: absolute;
+    color: #f28500;
+    text-shadow: 0 0 3px #ffbf00;
+}
+
+#visa_icon :focus {
+    outline: blue auto 5px;
+}
+
+#visa_icon :active,
+#visa_icon :focus
+{
+    border:0.5em solid #00c; /* here configure as your needs */
+    color:#00c;
+}
+
+.fa-border :focus
+{
+    color:#00c;
 }
