--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -412,8 +412,9 @@
     position: relative;
     top: 25%;
     width: 100%;
-    text-align: center;
+    text-align: left;
     margin-top: 30px;
+    margin-left: 15%;
 }
 
 .overlay a {
