--- a/Style/qr.css
+++ b/Style/qr.css
@@ -435,6 +435,27 @@ a:hover {
  color:white;
 }
 
+#qr_title{
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	text-align: center;
+	margin-bottom: -15px;
+	margin-top: 10px;
+	color: #428fe5;
+	font-size: 24px;
+
+}
+
+#game-btn {
+
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-size: large;
+	background-color: #428fe5;
+	color: white;
+	width: 100%;
+	max-width: 300px;
+	margin-top: 10px;
+}
+
 /*Footer Styling*/
 .mb-4 {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
