--- a/Style/wishlist.css
+++ b/Style/wishlist.css
@@ -156,13 +156,14 @@
 
 .product-id {
     /*visibility: hidden;*/
-    color: black;
+    color: white;
     font-size: 10px;
 }
 
 .product-title {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 14px;
+    color: black;
 }
 
 .product-qty {
@@ -186,6 +187,7 @@
 }
 
 .product-data-td {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding-top: 5px;
     text-align: left;
     padding-left: 15px;
@@ -415,6 +417,10 @@
         top: 73px;
         right: 30px;
     }
+}
+
+.fav-items{
+    color: white;
 }
 
 /*Footer Styling*/
