--- a/Style/deliverypage_style.css
+++ b/Style/deliverypage_style.css
@@ -240,14 +240,16 @@
     position: relative;
     top: 25%;
     width: 100%;
-    text-align: center;
-    margin-top: 30px;
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 15%;
+    margin-bottom: 50px;
 }
 
 .overlay a {
     padding: 8px;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 20px;
     color: black;
     display: block;
     transition: 0.3s;
@@ -351,6 +353,83 @@
     color:#00c;
 }
 
+/*Rating Page*/
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/*star rating*/
+.rating > span.active:before,
+.rating > span:hover:before,
+.rating > span:hover ~ span:before
+{
+    content: "\2605";
+    position: absolute;
+    color: #f28500;
+    text-shadow: 0 0 3px #ffbf00;
+}
+
+.rating {
+    color: #6c7075;
+    font: 700 26px/normal 'Montserrat', sans-serif;
+    text-transform:uppercase;
+
+    font-size: 24px;
+    display:block;
+    cursor:pointer;
+
+}
+.rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+}
+.rating > span {
+    margin: 10px;
+    display: inline-block;
+    position: relative;
+    width: 1.1em;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+    content: "\2605";
+    position: absolute;
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 /*Footer Styling*/
 .mb-4 {
