--- a/Style/homepage_style.css
+++ b/Style/homepage_style.css
@@ -413,14 +413,15 @@
     top: 25%;
     width: 100%;
     text-align: left;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 15%;
+    margin-bottom: 50px;
 }
 
 .overlay a {
     padding: 8px;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 20px;
     color: black;
     display: block;
     transition: 0.3s;
