--- a/Style/promo_style.css
+++ b/Style/promo_style.css
@@ -357,14 +357,16 @@ h5{
     position: relative;
     top: 25%;
     width: 100%;
-    text-align: center;
-    margin-top: 30px;
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 15%;
+    margin-bottom: 50px;
 }
 
 .overlay a {
     padding: 8px;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 20px;
     color: black;
     display: block;
     transition: 0.3s;
